# manhwa-notification-bot

./: .env.example  Dockerfile  LICENSE  README.md  alembic.ini  app.py  fernet.py  fly.toml  pyproject.toml  requirements.txt  roadmap 0.5.txt
alembic/: env.py
alembic/versions/: 0d83a5e1865a_update_website_tabel.py  170da422f56c_upgrade_models_with_nullable_features_.py  3190c32a6095_initial_migration.py  aae49a9e780b_update_user_model_for_save_last_time_.py
docs/: conf.py  index.rst
src/: bot.py  schedule_utils.py  scrapping.py  server.py  shedule_utils.py  utils.py
src/bot/: bot.py  buttons.py  conversation_handler.py  format_utils.py  handler.py  telegram_db_connector.py
src/db/: constant_manga_websites.py  db.py  models.py  repository.py
src/scraper/: main_scraper.py  manga_scans_scraper.py  scrapers_commands.py  srcaper_utils.py
src/utils/: log.py
tests/: conftest.py  test_bot.py  test_schedule_utils.py  test_scrapping.py  test_utils.py
